@@ -4,6 +4,9 @@
 # $Id$
 
   25 Jun 2011; Matt Turner <mattst88@gentoo.org>
+  modules/catalyst/arch/mips.py: Remove ip* classes
+
+  25 Jun 2011; Matt Turner <mattst88@gentoo.org>
   modules/catalyst/arch/mips.py: Remove mips2 classes
   Linux doesn't even run on mips2
 
